fix: Fixed the Link 404 error, fixed the word-wrap error for long links, overhaul the typescript context.

--- a/packages/web/app/tailwind.css
+++ b/packages/web/app/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer base {
   html {
-    font-family: Inter, system-ui, sans-serif;
+    font-family: 'Inter Variable', system-ui, sans-serif;
     @apply text-slate-12;
   }
 }
